Thin wrappers: For now, partially fix vertical mobile by cutting out what doesn't fit, which isn't much.

--- a/themes/thin-wrappers/index.css
+++ b/themes/thin-wrappers/index.css
@@ -1,3 +1,7 @@
+main {
+    overflow: hidden; /* Temporary partial fix for vertical mobile. */
+}
+
 #not-rigorous {
     text-align: center;
 }
